@@ -573,4 +573,65 @@ public class EvalTreeUtil {
   public static Datum evaluateImmediately(EvalNode evalNode) {
     return evalNode.eval(null, null);
   }
+
+  /**
+   * Checks whether EvalNode consists of only partition columns and const values.
+   * The partition based simple query can be defined as 'select * from tb_name where col_name1="X" and col_name2="Y" [LIMIT Z]',
+   * whose WHERE clause consists of only partition-columns with constant values.
+   * Partition columns must be able to form a prefix of HDFS path like '/tb_name1/col_name1=X/col_name2=Y'.
+   *
+   * @param node The qualification node of a SELECTION node
+   * @param partSchema Partition expression schema
+   * @return True if the query is partition-column based simple query.
+   */
+  public static boolean checkIfPartitionSelection(EvalNode node, Schema partSchema) {
+    if (node != null && node instanceof BinaryEval) {
+      BinaryEval eval = (BinaryEval)node;
+      EvalNode left = eval.getLeftExpr();
+      EvalNode right = eval.getRightExpr();
+      EvalType type = eval.getType();
+
+      if (type == EvalType.EQUAL) {
+        if (left instanceof FieldEval && right instanceof ConstEval && partSchema.contains(((FieldEval) left).getColumnName())) {
+          return true;
+        } else if (left instanceof ConstEval && right instanceof FieldEval && partSchema.contains(((FieldEval) right).getColumnName())) {
+          return true;
+        }
+      } else if (type == EvalType.AND && left instanceof BinaryEval && right instanceof BinaryEval) {
+        return checkIfPartitionSelection(left, partSchema) && checkIfPartitionSelection(right, partSchema);
+      }
+    }
+    return false;
+  }
+
+  /**
+   * Get partition constant value associated with `columnName`.
+   *
+   * @param node EvalNode having query predicates
+   * @param columnName Column name to be looked up
+   * @return String The value associated with `columnName` in the predicates
+   */
+  public static String getPartitionValue(EvalNode node, String columnName) {
+    if (node != null && node instanceof BinaryEval) {
+      BinaryEval eval = (BinaryEval)node;
+      EvalNode left = eval.getLeftExpr();
+      EvalNode right = eval.getRightExpr();
+      EvalType type = eval.getType();
+
+      if (type == EvalType.EQUAL) {
+        if (left instanceof FieldEval && right instanceof ConstEval && columnName.equals(((FieldEval) left).getColumnName())) {
+          return ((ConstEval)right).getValue().toString();
+        } else if (left instanceof ConstEval && right instanceof FieldEval && columnName.equals(((FieldEval) right).getColumnName())) {
+          return ((ConstEval)left).getValue().toString();
+        }
+      } else if (type == EvalType.AND && left instanceof BinaryEval && right instanceof BinaryEval) {
+        String value = getPartitionValue(left, columnName);
+        if (value == null) {
+          value = getPartitionValue(right, columnName);
+        }
+        return value;
+      }
+    }
+    return null;
+  }
 }
