@@ -100,6 +100,7 @@ public class PlannerUtil {
         PlannerUtil.getRelationLineage(plan.getRootBlock().getRoot()).length == 1;
 
     boolean noComplexComputation = false;
+    boolean prefixPartitionWhere = false;
     if (singleRelation) {
       ScanNode scanNode = plan.getRootBlock().getNode(NodeType.SCAN);
       if (scanNode == null) {
@@ -133,11 +134,34 @@ public class PlannerUtil {
           }
         }
       }
+
+      /**
+       * TODO: Remove isExternal check after resolving the following issues
+       * - TAJO-1416: INSERT INTO EXTERNAL PARTITIONED TABLE
+       * - TAJO-1441: INSERT INTO MANAGED PARTITIONED TABLE
+       */
+      if (!noWhere && scanNode.getTableDesc().isExternal() && scanNode.getTableDesc().getPartitionMethod() != null) {
+        EvalNode node = ((SelectionNode) plan.getRootBlock().getNode(NodeType.SELECTION)).getQual();
+        Schema partSchema = scanNode.getTableDesc().getPartitionMethod().getExpressionSchema();
+        if (EvalTreeUtil.checkIfPartitionSelection(node, partSchema)) {
+          prefixPartitionWhere = true;
+          boolean isPrefix = true;
+          for (Column c : partSchema.getColumns()) {
+            String value = EvalTreeUtil.getPartitionValue(node, c.getSimpleName());
+            if (isPrefix && value == null)
+              isPrefix = false;
+            else if (!isPrefix && value != null) {
+              prefixPartitionWhere = false;
+              break;
+            }
+          }
+        }
+      }
     }
 
     return !checkIfDDLPlan(rootNode) &&
         (simpleOperator && noComplexComputation && isOneQueryBlock &&
-            noOrderBy && noGroupBy && noWhere && noJoin && singleRelation);
+            noOrderBy && noGroupBy && (noWhere || prefixPartitionWhere) && noJoin && singleRelation);
   }
   
   /**
